--- a/style.css
+++ b/style.css
@@ -107,3 +107,34 @@ html{
     background-color: #BBB;
     color: black;
 }
+
+/* Classes dos logs */
+
+.logs ul{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.logs ul li{
+    display: flex;
+    justify-content: center;
+    padding: 3px 0px;
+    margin: 4px 0px;
+    font-weight: 600;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    border-radius: 3px;
+}
+
+.player{
+    background-color: #4256afaa;
+    color: white;
+}
+
+.monster{
+    background-color: #e51c23aa;
+    color: white;
+}
